adding latest updates